--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-03  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added missing files.
+	* sv.po: Updated Swedish translation.
+
 2005-01-03  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
