- Use xsltSaveResultToString here, fixes #162796
* src/yelp-toc-pager.c:
- Use xsltSaveResultToString here, fixes #162796

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-03  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Use xsltSaveResultToString here, fixes #162796
+
 2005-01-02  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-bookmarks.c:
