--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-03  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-01-03  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.in: Added missing files.
