--- a/po/de.po
+++ b/po/de.po
@@ -10,13 +10,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-02 23:42-0600\n"
-"PO-Revision-Date: 2004-12-20 15:21+0100\n"
+"POT-Creation-Date: 2005-01-03 18:14+0100\n"
+"PO-Revision-Date: 2005-01-03 18:34+0100\n"
 "Last-Translator: Hendrik Brandt <heb@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/man.xml.in.h:1 data/toc.xml.in.h:4
 msgid "Applications"
@@ -191,14 +191,12 @@ msgid "<b>Fonts</b>"
 msgstr "<b>Schrift</b>"
 
 #: data/ui/yelp.glade.h:3
-#, fuzzy
 msgid "<b>_Title:</b>"
-msgstr "<b>Schrift</b>"
+msgstr "<b>_Titel:</b>"
 
 #: data/ui/yelp.glade.h:4
-#, fuzzy
 msgid "Add Bookmark"
-msgstr "Lesezeichen _hinzufügen"
+msgstr "Lesezeichen hinzufügen"
 
 #: data/ui/yelp.glade.h:5
 msgid "Bookmarks"
@@ -298,12 +296,18 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-Fabrik"
 
+#: src/yelp-bookmarks.c:248 src/yelp-bookmarks.c:319
+#, c-format
+msgid "A bookmark titled <b>%s</b> already exists for this page."
+msgstr "Ein Lesezeichen mit dem Namen <b>%s</b> exisitiert bereits für diese Seite."
+
 #: src/yelp-db-pager.c:238
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
-msgstr ""
+msgstr "Die Datei »%s« konnte nicht analysiert werden. Entweder exisitiert die Datei nicht oder der "
+"Inhalt ist kein gültiges XML."
 
 #: src/yelp-db-pager.c:486
 msgid "Unknown"
@@ -311,37 +315,43 @@ msgstr "Unbekannt"
 
 #: src/yelp-error.c:42 src/yelp-error.c:58
 msgid "An unknown error occured"
-msgstr ""
+msgstr "Es ist ein unbekannter Fehler aufgetreten"
 
 #: src/yelp-error.c:46
 msgid "Could not load document"
-msgstr ""
+msgstr "Dokument konnte nicht geladen werden"
 
 #: src/yelp-error.c:48
-#, fuzzy
 msgid "Could not load section"
-msgstr "Es konnte kein neues Fenster geöffnet werden."
+msgstr "Abschnitt konnte nicht geladen werden"
 
 #: src/yelp-error.c:50
-#, fuzzy
 msgid "Could not read the table of contents"
-msgstr "Die OMF-Datei »%s« konnte nicht geladen werden."
+msgstr "Das Inhaltsverzeichnis konnte nicht gelesen werden"
 
 #: src/yelp-error.c:52
 msgid "Unsupported Format"
-msgstr ""
+msgstr "Nicht unterstütztes Format"
 
 #: src/yelp-error.c:54
 msgid "Could not read document"
-msgstr ""
+msgstr "Dokument konnte nicht gelesen werden"
 
 #: src/yelp-error.c:56
 msgid "Could not process document"
-msgstr ""
+msgstr "Dokument konnte nicht verarbeitet werden"
 
 #: src/yelp-error.c:66
 msgid "No information is available about the error."
-msgstr ""
+msgstr "Über diesen Fehler stehen keine weiteren Informationen zur Verfügung."
+
+#: src/yelp-io-channel.c:98
+#, c-format
+msgid ""
+"The file ‘%s’ could not be read and decoded. The file may be compressed in "
+"an unsupported format."
+msgstr "Die Datei »%s« konnte nicht gelesen und dekodiert werden. Eventuell ist die Datei in einem "
+"nicht unterstützen Format komprimiert."
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -365,7 +375,8 @@ msgstr "Hilfe"
 msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
-msgstr ""
+msgstr "Die Datei »%s« konnte nicht analysiert werden. Entweder exisitiert die Datei nicht oder der "
+"Inhalt hat das falsche Format."
 
 #: src/yelp-pager.c:120
 msgid "Document Information"
@@ -419,14 +430,16 @@ msgstr "Handbuch für %s lesen"
 msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
-msgstr ""
+msgstr "Das Inhaltsverzeichnis konnte nicht geladen werden. Entweder exisitiert die Datei »%s« nicht oder der "
+"Inhalt ist kein gültiges XML."
 
 #: src/yelp-toc-pager.c:873
 #, c-format
 msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
-msgstr ""
+msgstr "Das Inhaltsverzeichnis konnte nicht geladen werden. Entweder exisitiert die Datei »%s« nicht oder der "
+"Inhalt ist kein gültiges XSLT-Stylesheet."
 
 #: src/yelp-toc-pager.c:1024 src/yelp-xslt-pager.c:365
 msgid "No href attribute found on yelp:document"
@@ -457,20 +470,18 @@ msgid "_Help"
 msgstr "_Hilfe"
 
 #: src/yelp-window.c:309
-#, fuzzy
 msgid "_New Window"
 msgstr "_Neues Fenster"
 
 #: src/yelp-window.c:314
 msgid "About This Document"
-msgstr ""
+msgstr "Informationen über dieses Dokument"
 
 #: src/yelp-window.c:319
 msgid "Open _Location"
 msgstr "_Ort öffnen"
 
 #: src/yelp-window.c:324
-#, fuzzy
 msgid "_Close Window"
 msgstr "Fenster s_chließen"
 
@@ -519,14 +530,12 @@ msgid "Go to home view"
 msgstr "Zum Inhaltsverzeichnis gehen"
 
 #: src/yelp-window.c:372
-#, fuzzy
 msgid "_Previous Section"
-msgstr "V_orherige Seite"
+msgstr "V_orheriger Abschnitt"
 
 #: src/yelp-window.c:377
-#, fuzzy
 msgid "_Next Section"
-msgstr "_Nächste Seite"
+msgstr "_Nächster Abschnitt"
 
 #: src/yelp-window.c:382
 msgid "_Contents"
@@ -562,28 +571,30 @@ msgstr "Hilfe-Browser"
 
 #: src/yelp-window.c:697 src/yelp-window.c:830
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr ""
+msgstr "Der Uniform-Resource-Identifier (URI-Adresse) für diese Datei ist ungültig."
 
 #: src/yelp-window.c:709 src/yelp-window.c:825
 #, c-format
 msgid ""
 "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
 "actual file."
-msgstr ""
+msgstr "Der Uniform-Resource-Identifier (URI-Adresse) »%s« ist ungültig oder zeigt nicht auf eine "
+"existierende Datei."
 
 #: src/yelp-window.c:786 src/yelp-window.c:1124
 msgid "Man pages are not supported in this version."
-msgstr ""
+msgstr "Man-Pages werden in dieser Version nicht unterstützt."
 
 #: src/yelp-window.c:796 src/yelp-window.c:1115
 msgid "GNU info pages are not supported in this version"
-msgstr ""
+msgstr "GNU-Info-Pages werden in dieser Version nicht unterstützt"
 
 #: src/yelp-window.c:806
 msgid ""
 "SGML documents are no longer supported. Please ask the author of the "
 "document to convert to XML."
-msgstr ""
+msgstr "SGML-Dokumente werden nicht länger unterstützt. "
+"Bitten Sie den Verfasser darum, das Dokument in XML umzuwandeln."
 
 #: src/yelp-window.c:1021
 msgid "Fin_d"
@@ -594,7 +605,8 @@ msgstr "_Suchen"
 msgid ""
 "A transformation context could not be created for the file ‘%s’. The format "
 "may not be supported."
-msgstr ""
+msgstr "Es konnte kein Übersetzungskontext für die Datei »%s« erzeugt werden. "
+"Eventuell wird das Format nicht unterstützt."
 
 #: src/yelp-window.c:1171 src/yelp-window.c:1585 src/yelp-window.c:1652
 #, c-format
@@ -602,14 +614,16 @@ msgid ""
 "The section ‘%s’ does not exist in this document. If you were directed to "
 "this section from a Help button in an application, please report this to the "
 "maintainers of that application."
-msgstr ""
+msgstr "Den Abschnitt »%s« gibt es in diesem Dokument nicht. Wenn Sie von einem Hilfeschalter aus einer "
+"Anwendung hierher weitergeleitet wurden, melden Sie dies bitte dem Projektleiter der Anwendung."
 
 #: src/yelp-window.c:1286
 #, c-format
 msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
-msgstr ""
+msgstr "Die Datei »%s« konnte nicht gelesen werden. Eventuell gibt es sie nicht oder Sie haben nicht "
+"die notwendigen Zugriffrechte um diese zu lesen."
 
 #: src/yelp-window.c:1320
 msgid "Loading..."
@@ -634,60 +648,18 @@ msgstr "Ein zentraler Sammelpunkt von Hilfedokumente für den Gnome-Desktop."
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
-msgstr ""
+msgstr "Die Datei »%s« konnte nicht analyisiert werden. Entweder exisitiert die Datei nicht oder sie ist "
+"falsch formatiert."
 
 #: src/yelp-xslt-pager.c:215 src/yelp-xslt-pager.c:228
 #, c-format
 msgid ""
 "The document ‘%s’could not be processed. The file ‘%s’ is either missing or "
 "is not a valid XSLT stylesheet."
-msgstr ""
+msgstr "Das Dokument »%s« konnte nicht verarbeitet werden. Entweder existiert die Datei nicht oder sie "
+"ist kein gültiges XSLT-Stylesheet."
 
 #: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Hilfe zu GNOME holen"
 
-#~ msgid "Titlepage"
-#~ msgstr "Titelseite"
-
-#~ msgid "Contents"
-#~ msgstr "Inhalt"
-
-#~ msgid "The selected document could not be opened"
-#~ msgstr "Das gewählte Dokument konnte nicht geöffnet werden"
-
-#~ msgid "The selected page could not be found in this document."
-#~ msgstr "Die gewählte Seite konnte in diesem Dokument nicht gefunden werden."
-
-#~ msgid "The table of contents could not be read."
-#~ msgstr "Das Inhaltsverzeichnis konnte nicht gelesen werden."
-
-#~ msgid "DocBook SGML documents are no longer supported."
-#~ msgstr "DocBook-SGML-Dokumente werden nicht mehr unterstützt"
-
-#~ msgid "The selected file could not be read."
-#~ msgstr "Die gewählte Datei konnte nicht gelesen werden."
-
-#~ msgid "The file could not be processed."
-#~ msgstr "Die gewählte Datei konnte nicht verarbeitet werden."
-
-#~ msgid "X11"
-#~ msgstr "X11"
-
-#~ msgid "OpenSSL"
-#~ msgstr "OpenSSL"
-
-#~ msgid "Termcap"
-#~ msgstr "Termcap"
-
-#~ msgid "Perl"
-#~ msgstr "Perl"
-
-#~ msgid "Qt"
-#~ msgstr "Qt"
-
-#~ msgid "TIFF"
-#~ msgstr "TIFF"
-
-#~ msgid "PThreads"
-#~ msgstr "PThreads"
