--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-03  Žygimantas Beručka  <uid0@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2005-01-03  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
