Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-02 23:42-0600\n"
-"PO-Revision-Date: 2004-12-22 22:18-0400\n"
+"POT-Creation-Date: 2005-01-03 18:51-0500\n"
+"PO-Revision-Date: 2005-01-03 22:18-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: Canadian English <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
@@ -189,14 +189,12 @@ msgid "<b>Fonts</b>"
 msgstr "<b>Fonts</b>"
 
 #: data/ui/yelp.glade.h:3
-#, fuzzy
 msgid "<b>_Title:</b>"
-msgstr "<b>Fonts</b>"
+msgstr "<b>_Title:</b>"
 
 #: data/ui/yelp.glade.h:4
-#, fuzzy
 msgid "Add Bookmark"
-msgstr "_Add Bookmark"
+msgstr "Add Bookmark"
 
 #: data/ui/yelp.glade.h:5
 msgid "Bookmarks"
@@ -294,12 +292,19 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp Factory"
 
+#: src/yelp-bookmarks.c:248 src/yelp-bookmarks.c:319
+#, c-format
+msgid "A bookmark titled <b>%s</b> already exists for this page."
+msgstr "A bookmark titled <b>%s</b> already exists for this page."
+
 #: src/yelp-db-pager.c:238
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
 msgstr ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"not well-formed XML."
 
 #: src/yelp-db-pager.c:486
 msgid "Unknown"
@@ -307,37 +312,44 @@ msgstr "Unknown"
 
 #: src/yelp-error.c:42 src/yelp-error.c:58
 msgid "An unknown error occured"
-msgstr ""
+msgstr "An unknown error occurred"
 
 #: src/yelp-error.c:46
 msgid "Could not load document"
-msgstr ""
+msgstr "Could not load document"
 
 #: src/yelp-error.c:48
-#, fuzzy
 msgid "Could not load section"
-msgstr "Could not open new window."
+msgstr "Could not load section"
 
 #: src/yelp-error.c:50
-#, fuzzy
 msgid "Could not read the table of contents"
-msgstr "Could not load the OMF file '%s'."
+msgstr "Could not read the table of contents"
 
 #: src/yelp-error.c:52
 msgid "Unsupported Format"
-msgstr ""
+msgstr "Unsupported Format"
 
 #: src/yelp-error.c:54
 msgid "Could not read document"
-msgstr ""
+msgstr "Could not read document"
 
 #: src/yelp-error.c:56
 msgid "Could not process document"
-msgstr ""
+msgstr "Could not process document"
 
 #: src/yelp-error.c:66
 msgid "No information is available about the error."
+msgstr "No information is available about the error."
+
+#: src/yelp-io-channel.c:98
+#, c-format
+msgid ""
+"The file ‘%s’ could not be read and decoded. The file may be compressed in "
+"an unsupported format."
 msgstr ""
+"The file ‘%s’ could not be read and decoded. The file may be compressed in "
+"an unsupported format."
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -362,6 +374,8 @@ msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
 msgstr ""
+"The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
+"formatted incorrectly."
 
 #: src/yelp-pager.c:120
 msgid "Document Information"
@@ -416,6 +430,8 @@ msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
 msgstr ""
+"The table of contents could not be loaded. The file ‘%s’ is either missing "
+"or is not well-formed XML."
 
 #: src/yelp-toc-pager.c:873
 #, c-format
@@ -423,6 +439,8 @@ msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
 msgstr ""
+"The table of contents could not be processed. The file ‘%s’ is either "
+"missing or is not a valid XSLT stylesheet."
 
 #: src/yelp-toc-pager.c:1024 src/yelp-xslt-pager.c:365
 msgid "No href attribute found on yelp:document"
@@ -453,22 +471,20 @@ msgid "_Help"
 msgstr "_Help"
 
 #: src/yelp-window.c:309
-#, fuzzy
 msgid "_New Window"
-msgstr "_New window"
+msgstr "_New Window"
 
 #: src/yelp-window.c:314
 msgid "About This Document"
-msgstr ""
+msgstr "About This Document"
 
 #: src/yelp-window.c:319
 msgid "Open _Location"
 msgstr "Open _Location"
 
 #: src/yelp-window.c:324
-#, fuzzy
 msgid "_Close Window"
-msgstr "_Close window"
+msgstr "_Close Window"
 
 #: src/yelp-window.c:330
 msgid "_Copy"
@@ -515,14 +531,12 @@ msgid "Go to home view"
 msgstr "Go to home view"
 
 #: src/yelp-window.c:372
-#, fuzzy
 msgid "_Previous Section"
-msgstr "_Previous Page"
+msgstr "_Previous Section"
 
 #: src/yelp-window.c:377
-#, fuzzy
 msgid "_Next Section"
-msgstr "_Next Page"
+msgstr "_Next Section"
 
 #: src/yelp-window.c:382
 msgid "_Contents"
@@ -558,7 +572,7 @@ msgstr "Help Browser"
 
 #: src/yelp-window.c:697 src/yelp-window.c:830
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr ""
+msgstr "The Uniform Resource Identifier for the file is invalid."
 
 #: src/yelp-window.c:709 src/yelp-window.c:825
 #, c-format
@@ -566,20 +580,24 @@ msgid ""
 "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
 "actual file."
 msgstr ""
+"The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
+"actual file."
 
 #: src/yelp-window.c:786 src/yelp-window.c:1124
 msgid "Man pages are not supported in this version."
-msgstr ""
+msgstr "Man pages are not supported in this version."
 
 #: src/yelp-window.c:796 src/yelp-window.c:1115
 msgid "GNU info pages are not supported in this version"
-msgstr ""
+msgstr "GNU info pages are not supported in this version"
 
 #: src/yelp-window.c:806
 msgid ""
 "SGML documents are no longer supported. Please ask the author of the "
 "document to convert to XML."
 msgstr ""
+"SGML documents are no longer supported. Please ask the author of the "
+"document to convert to XML."
 
 #: src/yelp-window.c:1021
 msgid "Fin_d"
@@ -591,6 +609,8 @@ msgid ""
 "A transformation context could not be created for the file ‘%s’. The format "
 "may not be supported."
 msgstr ""
+"A transformation context could not be created for the file ‘%s’. The format "
+"may not be supported."
 
 #: src/yelp-window.c:1171 src/yelp-window.c:1585 src/yelp-window.c:1652
 #, c-format
@@ -599,6 +619,9 @@ msgid ""
 "this section from a Help button in an application, please report this to the "
 "maintainers of that application."
 msgstr ""
+"The section ‘%s’ does not exist in this document. If you were directed to "
+"this section from a Help button in an application, please report this to the "
+"maintainers of that application."
 
 #: src/yelp-window.c:1286
 #, c-format
@@ -606,6 +629,8 @@ msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
 msgstr ""
+"The file ‘%s’ could not be read.  This file might be missing, or you might "
+"not have permissions to read it."
 
 #: src/yelp-window.c:1320
 msgid "Loading..."
@@ -629,6 +654,8 @@ msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
 msgstr ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"improperly formatted."
 
 #: src/yelp-xslt-pager.c:215 src/yelp-xslt-pager.c:228
 #, c-format
@@ -636,52 +663,9 @@ msgid ""
 "The document ‘%s’could not be processed. The file ‘%s’ is either missing or "
 "is not a valid XSLT stylesheet."
 msgstr ""
+"The document ‘%s’could not be processed. The file ‘%s’ is either missing or "
+"is not a valid XSLT stylesheet."
 
 #: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Get help with GNOME"
-
-#~ msgid "Titlepage"
-#~ msgstr "Titlepage"
-
-#~ msgid "Contents"
-#~ msgstr "Contents"
-
-#~ msgid "The selected document could not be opened"
-#~ msgstr "The selected document could not be opened"
-
-#~ msgid "The selected page could not be found in this document."
-#~ msgstr "The selected page could not be found in this document."
-
-#~ msgid "The table of contents could not be read."
-#~ msgstr "The table of contents could not be read."
-
-#~ msgid "DocBook SGML documents are no longer supported."
-#~ msgstr "DocBook SGML documents are no longer supported."
-
-#~ msgid "The selected file could not be read."
-#~ msgstr "The selected file could not be read."
-
-#~ msgid "The file could not be processed."
-#~ msgstr "The file could not be processed."
-
-#~ msgid "X11"
-#~ msgstr "X11"
-
-#~ msgid "OpenSSL"
-#~ msgstr "OpenSSL"
-
-#~ msgid "Termcap"
-#~ msgstr "Termcap"
-
-#~ msgid "Perl"
-#~ msgstr "Perl"
-
-#~ msgid "Qt"
-#~ msgstr "Qt"
-
-#~ msgid "TIFF"
-#~ msgstr "TIFF"
-
-#~ msgid "PThreads"
-#~ msgstr "PThreads"
