--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-06  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2005-01-03  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
